Day2 문제 2번 풀이 올립니다.

--- a/sec_ds_lv3_prob1_prob.ipynb
+++ b/sec_ds_lv3_prob1_prob.ipynb
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ed3b41bb",
+   "id": "50647a6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cf93d0fd",
+   "id": "b1c992f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "54c9bce2",
+   "id": "8cc1ec66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80829963",
+   "id": "55fbaeeb",
    "metadata": {},
    "source": [
     "**Tip! product_code 별로 선형모델의 회귀 계수 / 절편 / R2 구해보기**\n",
@@ -987,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "87e74a3d",
+   "id": "5bd2becd",
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9f4ebeec",
+   "id": "2edb8c4d",
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "79d4cb29",
+   "id": "14c4221c",
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f18f7e31",
+   "id": "705c0d7b",
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1612,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "cc785e01",
+   "id": "a93e5988",
    "metadata": {},
    "outputs": [
     {
@@ -1951,7 +1951,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "383c52d9",
+   "id": "b4f58fcd",
    "metadata": {},
    "outputs": [
     {
@@ -2068,7 +2068,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6d7e8fd8",
+   "id": "c07e0dde",
    "metadata": {},
    "outputs": [
     {
@@ -2117,11 +2117,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "f7563df2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jarque_beraResult(statistic=1.467731470333654, pvalue=0.4800496537264637)\n",
+      "Jarque_beraResult(statistic=0.6168837955943998, pvalue=0.7345906322931469)\n",
+      "Jarque_beraResult(statistic=7.536229242478234, pvalue=0.023095566154546443)\n",
+      "Jarque_beraResult(statistic=0.04839464502051384, pvalue=0.9760930856160965)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 방법 1: 하드코딩\n",
+    "from scipy.stats import jarque_bera\n",
+    "\n",
+    "print(jarque_bera(df_prob2.loc[df_prob2['product_code'] == 'A', 'loading_log']))\n",
+    "print(jarque_bera(df_prob2.loc[df_prob2['product_code'] == 'B', 'loading_log']))\n",
+    "print(jarque_bera(df_prob2.loc[df_prob2['product_code'] == 'C', 'loading_log']))\n",
+    "print(jarque_bera(df_prob2.loc[df_prob2['product_code'] == 'E', 'loading_log']))\n",
+    "B = 3\n",
+    "B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1665ffb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>stat</th>\n",
+       "      <th>pvalue</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>product_code</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>A</td>\n",
+       "      <td>1.467731</td>\n",
+       "      <td>0.480050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>B</td>\n",
+       "      <td>0.616884</td>\n",
+       "      <td>0.734591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>C</td>\n",
+       "      <td>7.536229</td>\n",
+       "      <td>0.023096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>E</td>\n",
+       "      <td>0.048395</td>\n",
+       "      <td>0.976093</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  stat    pvalue\n",
+       "product_code                    \n",
+       "A             1.467731  0.480050\n",
+       "B             0.616884  0.734591\n",
+       "C             7.536229  0.023096\n",
+       "E             0.048395  0.976093"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 방법 2: groupby ~ apply\n",
+    "from scipy.stats import jarque_bera\n",
+    "\n",
+    "df_jarque = df_prob2.groupby('product_code')['loading_log'].apply(\n",
+    "    lambda x: pd.Series(jarque_bera(x), index = ['stat', 'pvalue'])\n",
+    ").unstack()\n",
+    "display(df_jarque)\n",
+    "B = (df_jarque['pvalue'] >= 0.05).sum()\n",
+    "B"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2149,11 +2276,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "58e4897b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(BartlettResult(statistic=1.928667047072185, pvalue=0.5873433093297675),\n",
+       " 0.5873433093297675)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 방법 1: 하드코딩\n",
+    "from scipy.stats import bartlett\n",
+    "\n",
+    "result_2_4 = bartlett(\n",
+    "    df_prob2.loc[df_prob2['product_code'] == 'A', 'loading_log'],\n",
+    "    df_prob2.loc[df_prob2['product_code'] == 'B', 'loading_log'],\n",
+    "    df_prob2.loc[df_prob2['product_code'] == 'C', 'loading_log'],\n",
+    "    df_prob2.loc[df_prob2['product_code'] == 'E', 'loading_log']\n",
+    ")\n",
+    "C = result_2_4.pvalue\n",
+    "result_2_4, C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "67694bbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(BartlettResult(statistic=1.928667047072185, pvalue=0.5873433093297675),\n",
+       " 0.5873433093297675)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 방법 2: groupby ~ list unpacking\n",
+    "\n",
+    "result_2_4 = bartlett(\n",
+    "    *df_prob2.groupby('product_code')['loading_log'].agg(list)\n",
+    ")\n",
+    "C = result_2_4.pvalue\n",
+    "result_2_4, C"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2179,11 +2358,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "ec47f9e0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(F_onewayResult(statistic=0.37177284134760413, pvalue=0.7733782072320899),\n",
+       " 0.7733782072320899)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import f_oneway\n",
+    "result_2_5 = f_oneway(\n",
+    "    *df_prob2.groupby('product_code')['loading_log'].agg(list)\n",
+    ")\n",
+    "D = result_2_5.pvalue\n",
+    "result_2_5, D"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2212,18 +2410,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "a487a9bb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import chi2_contingency # , correction=False\n",
+    "result_2_6 = chi2_contingency(\n",
+    "    pd.crosstab(\n",
+    "        index = df_prob2['attribute_0'] + df_prob2['attribute_1'],\n",
+    "        columns = df_prob2['failure']\n",
+    "    ), correction = False\n",
+    ")\n",
+    "# H0: 독립이다. -> 연관이 없다\n",
+    "# H1: 독립이 아니다. -> 연관이 있다.\n",
+    "E = 0 if result_2_6[1] >= 0.01 else 1\n",
+    "E"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "f3edfe31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 0.5873433093297675, 0.7733782072320899, 0, 4.360721516561858, 4.36)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B, C, D, E, B + C + D + E, round(B + C + D + E, 2)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "af42805f",
    "metadata": {},
    "source": [
-    "B + C + D + E의 값을 소수점 셋째 자리에서 반올림하여 둘째 자리까지 출력하시오.\n"
+    "B + C + D + E의 값을 소수점 셋째 자리에서 반올림하여 둘째 자리까지 출력하시오.\n",
+    "\n",
+    "**4.36**"
    ]
   },
   {
