--- a/sec_ds_lv3_prob1_prob.ipynb
+++ b/sec_ds_lv3_prob1_prob.ipynb
@@ -760,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "50647a6a",
+   "id": "f7608432",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b1c992f1",
+   "id": "a63759c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8cc1ec66",
+   "id": "3b14cacb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55fbaeeb",
+   "id": "749f0b98",
    "metadata": {},
    "source": [
     "**Tip! product_code 별로 선형모델의 회귀 계수 / 절편 / R2 구해보기**\n",
@@ -986,8 +986,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "5bd2becd",
+   "execution_count": 11,
+   "id": "852cc093",
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1110,7 @@
        "E             0.999987  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,8 +1140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "2edb8c4d",
+   "execution_count": 12,
+   "id": "aa1b67e8",
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1240,7 @@
        "[15827 rows x 1 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "93b98c5b",
    "metadata": {},
    "outputs": [
@@ -1327,7 +1327,7 @@
        "(-2.905807189028007, 0.0036630709140241546)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1348,8 +1348,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "14c4221c",
+   "execution_count": 14,
+   "id": "7f4e183c",
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1358,7 @@
        "(-2.905807189028007, 0.0036630709140241546)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1376,8 +1376,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "705c0d7b",
+   "execution_count": 15,
+   "id": "a0be2309",
    "metadata": {},
    "outputs": [
     {
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "f49aa12e",
    "metadata": {},
    "outputs": [
@@ -1583,7 +1583,7 @@
        "13  isna_16  1708 -0.478314  0.632427"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1611,8 +1611,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "a93e5988",
+   "execution_count": 17,
+   "id": "914c8544",
    "metadata": {},
    "outputs": [
     {
@@ -1676,7 +1676,7 @@
        "0.029988079249523434"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "207e8c39",
    "metadata": {},
    "outputs": [
@@ -1935,7 +1935,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1950,8 +1950,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "b4f58fcd",
+   "execution_count": 19,
+   "id": "6e39f041",
    "metadata": {},
    "outputs": [
     {
@@ -1960,7 +1960,7 @@
        "(0.029988079249523434, 0.03)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2023,7 +2023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "d2ef461d",
    "metadata": {},
    "outputs": [
@@ -2033,7 +2033,7 @@
        "(21257, 42)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2055,7 +2055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "fb0152db",
    "metadata": {},
    "outputs": [],
@@ -2067,8 +2067,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "c07e0dde",
+   "execution_count": 22,
+   "id": "73992636",
    "metadata": {},
    "outputs": [
     {
@@ -2117,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "id": "f7563df2",
    "metadata": {},
    "outputs": [
@@ -2137,7 +2137,7 @@
        "3"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2156,8 +2156,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "1665ffb3",
+   "execution_count": 24,
+   "id": "e980f37e",
    "metadata": {},
    "outputs": [
     {
@@ -2233,7 +2233,7 @@
        "3"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2276,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "id": "58e4897b",
    "metadata": {},
    "outputs": [
@@ -2287,7 +2287,7 @@
        " 0.5873433093297675)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2308,8 +2308,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "67694bbb",
+   "execution_count": 26,
+   "id": "92209608",
    "metadata": {},
    "outputs": [
     {
@@ -2319,7 +2319,7 @@
        " 0.5873433093297675)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2358,7 +2358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 27,
    "id": "ec47f9e0",
    "metadata": {},
    "outputs": [
@@ -2369,7 +2369,7 @@
        " 0.7733782072320899)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2381,6 +2381,56 @@
     ")\n",
     "D = result_2_5.pvalue\n",
     "result_2_5, D"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e5f25c5",
+   "metadata": {},
+   "source": [
+    "**Tip** 일원분산분석을 직접해봅니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "3a66d9ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.3717728413460874,\n",
+       " 0.7733782072326594,\n",
+       " 1879.1520065602526,\n",
+       " 1879.1520065602524)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import f\n",
+    "# F = MSR / MSE \n",
+    "# MSR = SSR(Sum of squares due to Regression) / (k - 1), MSE = SSE(Sum of squares Error) / (n - k)\n",
+    "# SST(Sum of squares of Total) = SSR + SSE , SST의 자유도(n - 1) = SSR 자유도(k - 1) + SSE 자유도(n - k)\n",
+    "# SSR = ((y_hat - y_bar) ** 2).sum(), SSE = ((y_hat - y_true) ** 2).sum()\n",
+    "# SST = ((y_true - y_bar) ** 2).sum()\n",
+    "# s_mean = df_prob2.groupby('product_code')['loading_log'].mean()\n",
+    "# df_prob2['product_code'].map(s_mean)\n",
+    "y_hat = df_prob2.groupby('product_code')['loading_log'].transform('mean')\n",
+    "y_true = df_prob2['loading_log']\n",
+    "y_bar = y_true.mean()\n",
+    "SSR = ((y_hat - y_bar) ** 2).sum()\n",
+    "SSE = ((y_hat - y_true) ** 2).sum()\n",
+    "SST = ((y_true - y_bar) ** 2).sum()\n",
+    "k, n = df_prob2['product_code'].nunique(), len(df_prob2)\n",
+    "MSR = SSR / (k - 1)\n",
+    "MSE = SSE / (n - k)\n",
+    "F = MSR / MSE\n",
+    "F, f.sf(F, k - 1, n - k), SST, SSR + SSE"
    ]
   },
   {
@@ -2410,17 +2460,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "id": "a487a9bb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "((7.0400463075335615,\n",
+       "  0.029598749837407304,\n",
+       "  2,\n",
+       "  array([[4106.03584702, 1102.96415298],\n",
+       "         [4162.79042198, 1118.20957802],\n",
+       "         [8487.17373101, 2279.82626899]])),\n",
+       " 0)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2436,13 +2492,13 @@
     "# H0: 독립이다. -> 연관이 없다\n",
     "# H1: 독립이 아니다. -> 연관이 있다.\n",
     "E = 0 if result_2_6[1] >= 0.01 else 1\n",
-    "E"
+    "result_2_6, E"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "f3edfe31",
+   "execution_count": 30,
+   "id": "a10d3b04",
    "metadata": {},
    "outputs": [
     {
@@ -2451,13 +2507,63 @@
        "(3, 0.5873433093297675, 0.7733782072320899, 0, 4.360721516561858, 4.36)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "B, C, D, E, B + C + D + E, round(B + C + D + E, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7e54b66",
+   "metadata": {},
+   "source": [
+    "**Tip!** $Chi^2$ 검정도 직접해봅니다.\n",
+    "\n",
+    "$chi2 = \\sum_{i,j}\\frac{(E_{ij} - O_{ij})^2}{E_{ij}}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c99919c9",
+   "metadata": {},
+   "source": [
+    "$p(X=x_i, Y=y_j) = p(X=x_i) p(Y=y_j)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "f530e1db",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7.040046307533586, 2, 0.029598749837406936)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import chi2\n",
+    "s_attr12 = df_prob2['attribute_0'] + df_prob2['attribute_1']\n",
+    "df_E = s_attr12.value_counts(normalize=True).rename('val').to_frame().dot(\n",
+    "    df_prob2['failure'].value_counts().rename('val').to_frame().T\n",
+    ")\n",
+    "df_O = pd.crosstab(\n",
+    "    index = df_prob2['attribute_0'] + df_prob2['attribute_1'],\n",
+    "    columns = df_prob2['failure']\n",
+    ")\n",
+    "Chi2 = ((df_E - df_O) ** 2 / df_E).sum().sum()\n",
+    "dof = (s_attr12.nunique() - 1) * (df_prob2['failure'].nunique() - 1)\n",
+    "Chi2, dof, chi2.sf(Chi2, dof)"
    ]
   },
   {
@@ -2502,11 +2608,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "74e376a6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_prob3 = df_prob1.assign(\n",
+    "    loading = lambda x: x['loading'].fillna(x['loading'].mean())\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2535,11 +2645,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "7b58d9c8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "df_prob3_train, df_prob3_test = train_test_split(\n",
+    "    df_prob3, train_size = 0.8, random_state = 123, stratify = df_prob3['failure']\n",
+    ")\n",
+    "df_prob3_train, df_prob3_test = df_prob3_train.copy(), df_prob3_test.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "1d855b6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>train</th>\n",
+       "      <th>test</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.788535</td>\n",
+       "      <td>0.788677</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.211465</td>\n",
+       "      <td>0.211323</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      train      test\n",
+       "0  0.788535  0.788677\n",
+       "1  0.211465  0.211323"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([\n",
+    "    df_prob3_train['failure'].value_counts(normalize=True).rename('train'),\n",
+    "    df_prob3_test['failure'].value_counts(normalize=True).rename('test')\n",
+    "], axis=1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2568,11 +2748,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "bf17f958",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "std_scaler = StandardScaler()\n",
+    "X_std = ['loading'] + ['measurement_{}'.format(i) for i in range(18)]\n",
+    "df_prob3_train[X_std] =  std_scaler.fit_transform(df_prob3_train[X_std])\n",
+    "df_prob3_test[X_std] = std_scaler.transform(df_prob3_test[X_std])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2604,8 +2790,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "fb86e3fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.5792951262053387, 0.5952982435574312)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression #  solver='lbfgs\n",
+    "from sklearn.metrics import roc_auc_score # 성능 지표: AUC\n",
+    "X_lr = ['loading'] + ['measurement_{}'.format(i) for i in range(18)] + ['na_1', 'na_2']\n",
+    "clf_lr = LogisticRegression(solver = 'lbfgs')\n",
+    "clf_lr.fit(df_prob3_train[X_lr], df_prob3_train['failure'])\n",
+    "(\n",
+    "    roc_auc_score(\n",
+    "        df_prob3_test['failure'], clf_lr.predict_proba(df_prob3_test[X_lr])[:, 1]\n",
+    "    ), #  roc_auc_score(df_prob3_test['failure'], clf_lr.decision_function(df_prob3_test[X_lr]))\n",
+    "    roc_auc_score(\n",
+    "        df_prob3_train['failure'], clf_lr.predict_proba(df_prob3_train[X_lr])[:, 1]\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "02102cc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5778277926972065"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "roc_auc_score(df_prob3_test['failure'], df_prob3_test['loading'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1556918c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2653,7 +2893,15 @@
    "id": "9713233f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from mlxtend.feature_selection import SequentialFeatureSelector\n",
+    "from sklearn.linear_model import LogisticRegression, solver='lbfgs'\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "# 전진 선택법을 사용하여 이 \n",
+    "# 후보 입력 변수 중에서 최적의 성능을 보이는 입력 변수의 조합을 찾는다.\n",
+    "# 전진 선택법의 선택 기준은 prob3_train을 대상으로 5겹 층화교차검증(5-Fold stratified cross validation)을 하고\n",
+    "# 전진 선택 과정에서 선택했던 변수를 제외하지 않는다."
+   ]
   },
   {
    "cell_type": "markdown",
