Day2 일반 문제 풀이, 설명, 팁 올립니다.

--- a/sec_ds_lv3_prob1_prob.ipynb
+++ b/sec_ds_lv3_prob1_prob.ipynb
@@ -1493,12 +1493,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "e6580ec8",
+   "execution_count": 84,
+   "id": "93ee45a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>N</th>\n",
+       "      <th>Z</th>\n",
+       "      <th>pvalue</th>\n",
+       "      <th>chi2_stat</th>\n",
+       "      <th>chi2_pvalue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>isna_3</td>\n",
+       "      <td>312</td>\n",
+       "      <td>-2.905807</td>\n",
+       "      <td>0.003663</td>\n",
+       "      <td>8.172335</td>\n",
+       "      <td>0.004253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>isna_4</td>\n",
+       "      <td>442</td>\n",
+       "      <td>-1.346824</td>\n",
+       "      <td>0.178037</td>\n",
+       "      <td>1.690225</td>\n",
+       "      <td>0.193571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>isna_5</td>\n",
+       "      <td>565</td>\n",
+       "      <td>-2.221383</td>\n",
+       "      <td>0.026325</td>\n",
+       "      <td>4.825618</td>\n",
+       "      <td>0.028040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>isna_6</td>\n",
+       "      <td>640</td>\n",
+       "      <td>-0.261780</td>\n",
+       "      <td>0.793491</td>\n",
+       "      <td>0.045938</td>\n",
+       "      <td>0.830288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>isna_7</td>\n",
+       "      <td>766</td>\n",
+       "      <td>-0.890904</td>\n",
+       "      <td>0.372981</td>\n",
+       "      <td>0.738959</td>\n",
+       "      <td>0.389995</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>isna_8</td>\n",
+       "      <td>853</td>\n",
+       "      <td>-0.698051</td>\n",
+       "      <td>0.485145</td>\n",
+       "      <td>0.451816</td>\n",
+       "      <td>0.501474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>isna_9</td>\n",
+       "      <td>989</td>\n",
+       "      <td>-0.539344</td>\n",
+       "      <td>0.589650</td>\n",
+       "      <td>0.259546</td>\n",
+       "      <td>0.610432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>isna_10</td>\n",
+       "      <td>1059</td>\n",
+       "      <td>-0.762200</td>\n",
+       "      <td>0.445940</td>\n",
+       "      <td>0.547787</td>\n",
+       "      <td>0.459223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>isna_11</td>\n",
+       "      <td>1180</td>\n",
+       "      <td>-0.103525</td>\n",
+       "      <td>0.917546</td>\n",
+       "      <td>0.005323</td>\n",
+       "      <td>0.941839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>isna_12</td>\n",
+       "      <td>1287</td>\n",
+       "      <td>-0.609528</td>\n",
+       "      <td>0.542174</td>\n",
+       "      <td>0.348265</td>\n",
+       "      <td>0.555097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>isna_13</td>\n",
+       "      <td>1395</td>\n",
+       "      <td>-0.452658</td>\n",
+       "      <td>0.650795</td>\n",
+       "      <td>0.191519</td>\n",
+       "      <td>0.661656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>isna_14</td>\n",
+       "      <td>1482</td>\n",
+       "      <td>-0.681067</td>\n",
+       "      <td>0.495829</td>\n",
+       "      <td>0.447991</td>\n",
+       "      <td>0.503291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>isna_15</td>\n",
+       "      <td>1603</td>\n",
+       "      <td>-0.007695</td>\n",
+       "      <td>0.993860</td>\n",
+       "      <td>0.000756</td>\n",
+       "      <td>0.978065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>isna_16</td>\n",
+       "      <td>1708</td>\n",
+       "      <td>-0.478314</td>\n",
+       "      <td>0.632427</td>\n",
+       "      <td>0.222295</td>\n",
+       "      <td>0.637297</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name     N         Z    pvalue  chi2_stat  chi2_pvalue\n",
+       "0    isna_3   312 -2.905807  0.003663   8.172335     0.004253\n",
+       "1    isna_4   442 -1.346824  0.178037   1.690225     0.193571\n",
+       "2    isna_5   565 -2.221383  0.026325   4.825618     0.028040\n",
+       "3    isna_6   640 -0.261780  0.793491   0.045938     0.830288\n",
+       "4    isna_7   766 -0.890904  0.372981   0.738959     0.389995\n",
+       "5    isna_8   853 -0.698051  0.485145   0.451816     0.501474\n",
+       "6    isna_9   989 -0.539344  0.589650   0.259546     0.610432\n",
+       "7   isna_10  1059 -0.762200  0.445940   0.547787     0.459223\n",
+       "8   isna_11  1180 -0.103525  0.917546   0.005323     0.941839\n",
+       "9   isna_12  1287 -0.609528  0.542174   0.348265     0.555097\n",
+       "10  isna_13  1395 -0.452658  0.650795   0.191519     0.661656\n",
+       "11  isna_14  1482 -0.681067  0.495829   0.447991     0.503291\n",
+       "12  isna_15  1603 -0.007695  0.993860   0.000756     0.978065\n",
+       "13  isna_16  1708 -0.478314  0.632427   0.222295     0.637297"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO-with"
+    "from scipy.stats import chi2_contingency\n",
+    "df_chi2 = df_basetable[['isna_{}'.format(i) for i in range(3, 17)]].apply(\n",
+    "    lambda x: chi2_contingency(\n",
+    "        pd.crosstab(\n",
+    "            index = x, columns = df_basetable['failure']\n",
+    "        )\n",
+    "    ), \n",
+    "    axis = 0,\n",
+    ").apply(\n",
+    "    lambda x: pd.Series([x[0], x[1]], index = ['chi2_stat', 'chi2_pvalue'])\n",
+    ")\n",
+    "df_ztest.join(\n",
+    "    df_chi2, on = 'name'\n",
+    ")"
    ]
   },
   {
@@ -3518,7 +3714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 86,
    "id": "56350224",
    "metadata": {},
    "outputs": [
@@ -3555,7 +3751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 87,
    "id": "de12a364",
    "metadata": {},
    "outputs": [
@@ -3565,7 +3761,7 @@
        "Ttest_indResult(statistic=5.927378456131373, pvalue=3.1370243739954236e-09)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3584,7 +3780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 88,
    "id": "dce5d9e0",
    "metadata": {},
    "outputs": [
@@ -3594,7 +3790,7 @@
        "MannwhitneyuResult(statistic=22895846.0, pvalue=1.4282689236218276e-10)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
