Day3 전처리 풀이 올립니다.

--- a/sec_ds_lv3_prob2_prob.ipynb
+++ b/sec_ds_lv3_prob2_prob.ipynb
@@ -424,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6e330f7c",
+   "id": "6418da5f",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "f6c6ac9b",
    "metadata": {},
    "outputs": [
@@ -526,7 +526,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cat3 {'B': 'C'} [83634, 147361, 9005]\n"
+      "cat3 {'B': 'C'} [83634, 147361, 9005]\n",
+      "cat4 {'A': 'B', 'D': 'B'} [239397, 603]\n",
+      "cat6 {'D': 'A', 'E': 'B', 'G': 'C', 'H': 'B', 'I': 'A'} [234203, 5145, 652]\n",
+      "cat7 {'A': 'B', 'C': 'B', 'F': 'D', 'I': 'B'} [4606, 19784, 214027, 1583]\n",
+      "cat8 {'B': 'G', 'F': 'E'} [30338, 96743, 2953, 76085, 33881]\n",
+      "cat9 {'C': 'H', 'D': 'B', 'E': 'L'} [10678, 2846, 85944, 8320, 19987, 40070, 5501, 16743, 33793, 7819, 3331, 4968]\n"
      ]
     }
    ],
@@ -535,7 +540,7 @@
     "# 83,634\t147,361\t9,005\n",
     "repl_list = [\n",
     "    ('cat3', {'B': 'C'}, [83634, 147361, 9005]),\n",
-    "    ('cat4', {'A': 'B', 'D': 'B'}, [239397,603]),\n",
+    "    ('cat4', {'A': 'B', 'D': 'B'}, [239397, 603]),\n",
     "    ('cat6', {'D': 'A', 'E': 'B', 'G': 'C', 'H': 'B', 'I': 'A'}, [234203, 5145, 652]),\n",
     "    ('cat7', {'A': 'B', 'C': 'B', 'F': 'D', 'I': 'B'}, [4606, 19784, 214027, 1583]),\n",
     "    ('cat8', {'B': 'G', 'F': 'E'}, [30338, 96743, 2953, 76085, 33881]),\n",
@@ -543,8 +548,41 @@
     "]\n",
     "\n",
     "for c, d, cnt in repl_list:\n",
+    "    s_repl = df_train[c].replace(d)\n",
     "    print(c, d, cnt)\n",
-    "# (df_train['cat3'].replace({'B': 'C'}).value_counts().sort_index() != [83634, 147361, 9005]).any()"
+    "    s_vcnt = s_repl.value_counts().sort_index()\n",
+    "    if len(s_vcnt) != len(cnt) or (s_vcnt != cnt).any():\n",
+    "        print(s_vcnt)\n",
+    "        break\n",
+    "    df_train[c] = s_repl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "56d186c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array(['cat0', 'cat1', 'cat2', 'cat3', 'cat4', 'cat5', 'cat6', 'cat7',\n",
+       "        'cat8', 'cat9'], dtype='<U4'),\n",
+       " array(['cont0', 'cont1', 'cont2', 'cont3', 'cont4', 'cont5', 'cont6',\n",
+       "        'cont7', 'cont8', 'cont9', 'cont10', 'cont11', 'cont12', 'cont13'],\n",
+       "       dtype='<U6'))"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat_cols = ['cat{}'.format(i) for i in range(10)]\n",
+    "cont_cols = ['cont{}'.format(i) for i in range(14)]\n",
+    "df_basetable = df_train.copy()\n",
+    "np.array(cat_cols), np.array(cont_cols)"
    ]
   },
   {
